tests/baselines/reference/parserStrictMode12.errors.txt
==== tests/cases/compiler/parserStrictMode12.ts (1 errors) ====
    "use strict";
    var v = { set foo(eval) { } }
                      ~~~~
!!! parserStrictMode12.ts(2,19): error TS1100: Invalid use of 'eval' in strict mode.